lms-app/templates/frontend.yaml
---
# THE SERVICE
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: lms-frontend
  ports:
    - port: 80
      targetPort: 8080

---
# THE DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lms-frontend
  template:
    metadata:
      labels:
        app: lms-frontend
    spec:
      containers:
        - name: frontend
          image: riajulkabir63/lms-frontend
          ports:
            - containerPort: 8080
