lms-app/templates/postgres.yaml
---
# 1. THE SERVICE (The Internal Network Address)
apiVersion: v1
kind: Service
metadata:
  name: postgres-service # The backend will use this name to connect!
spec:
  selector:
    app: postgres-db
  ports:
    - port: 5432
      targetPort: 5432

---
# 2. THE DEPLOYMENT (The Container Manager)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db # This label links the Pod to the Service above
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
